--- a/stylesss.css
+++ b/stylesss.css
@@ -1,39 +1,108 @@
 
 .navbar {
-  transform: translateY(-185px);
-
+  display: flex;
   overflow: hidden;
-  background-color: #333;
-
+  background: #6C63FF;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 15;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.home {
+  margin-top: 60px;
+}
+
+.logo {
+  flex: 2;
+}
+
+.nav-links {
+  flex: 3;
+}
+
 .navbar a {
-  float: center;
-  font-size: 20px;
-  color: cyan;
-  text-align: center;
+  /* float: right; */
+  font-size: 24px;
+  color: white;
+  /* text-align: center; */
   padding: 14px 16px 15px 14px;
   text-decoration: none;
 }
-.navbar a:hover {
-  background-color: red;
+.navbar a {
+  /* float: right; */
+  font-size: 24px;
+  color: white;
+  /* text-align: center; */
+  padding: 14px 16px 15px 14px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: cyan;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background: #534AE8;
+  transition: all 0.25s ease-in ;
+}
+
+.dropdown-content-for-values {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content-for-values a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 body {
-  background: url("fp.jpg") center center no-repeat;
   background-size: cover;
-  transform: translateY(200px);
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  align-items: center;
+    width: 100vw;
+    height: 100vh;
+    /*display: grid;
+    align-items: center;
   justify-items: center;
   font-size: 12pt;
-  font-family: "Bookman";
-  color: #ff0055;
+  font-family: "Spartan";
+  color: #2A293E;*/
+    background: url("undraw_web_shopping_dd4l.svg") no-repeat center center fixed;
+
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.contact-us {
-  transform: translateY(-150px);
+.contact-us
+width: 100vw;
+height: 100vh;
   background:  #ffe6ee;
   padding: 50px 100px;
   border-top: 10px solid #ff0055;
